# aws-snap-io

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: read_snapshot.rs
src/: cache.rs  lib.rs  snap.rs
src/sparse/: mod.rs  nix.rs  win.rs
