[package]
name = "awssnapio"
version = "0.1.0"
description = "A library for implementing Read/Seek around an AWS Snapshot."
authors = ["Matthew Seyer <matthew.seyer@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-only"
edition = "2021"
repository = "https://github.com/forensicmatt/aws-snap-io"
keywords = ["AWS", "Amazon", "EBS", "snapshot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sha2 = "0.10.2"
base64 = "0.13.0"
bytes = "1"
serde = "1"

aws-config = "^0.51"
aws-types = "^0.51"
aws-smithy-http = "^0.51"
aws-sdk-ebs = "^0.21"
aws-sdk-ec2 = "^0.21"

hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
snafu = "0.7"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
widestring = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
]

[dev-dependencies]
fern = "0.5"
chrono = "0.4"

[dev-dependencies.clap]
version = "4"
features = ["derive"]